changed root_conf.cnf to new paths

--- a/pki/root_conf.cnf
+++ b/pki/root_conf.cnf
@@ -8,14 +8,14 @@ authorityKeyIdentifier=keyid:always
 dir = ./
 new_certs_dir = $dir
 unique_subject = no
-certificate = $dir/root_crt.pem
-database = $dir/certindex
-private_key = $dir/root_key.pem
-serial = $dir/certserial
+certificate = $dir/pki/root_crt.pem
+database = $dir/pki/certindex
+private_key = $dir/pki/root_key.pem
+serial = $dir/pki/certserial
 default_days = 720
 default_md = sha1
 policy = simplecert_policy
-crlnumber = $dir/crlnumber
+crlnumber = $dir/pki/crlnumber
 default_crl_days = 720
 crl_extensions = crl_ext
 
