--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,9 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+<servlet>
+    <servlet-name>ServletListener</servlet-name>
+    <servlet-class>de.projectnash.application.util.StartUpSchedulerServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+</servlet>
 </web-app>
